tests/NormalTests/paczka2/big_fuzzy/57039983.err
Error in line 3: FzWa A637 73,8
Error in line 22: gvtBv9 A637 194,9
Error in line 34: AK7Fjrup A637 76,0
Error in line 35: gvtBv9 A691 92,0
Error in line 57: AK7Fjrup A470 5,0
Error in line 59: AK7Fjrup S973 24,6
Error in line 52: T4uwn9G S973 24,4
Error in line 76: T4uwn9G A637 69,36
Error in line 82: T4uwn9G A637 65,04
Error in line 62: AK7Fjrup A637 79,5
Error in line 71: T4uwn9G A637 25,6
Error in line 85: T4uwn9G A691 71,2
Error in line 91: A470 S973 13,3
Error in line 94: gvtBv9 S973 -1,4
Error in line 99: 6fefvM0TTj S973 24,4
Error in line 107: AK7Fjrup A691 62,2
Error in line 111: FzWa S973 52,4
Error in line 122: T4uwn9G A470 97,8
Error in line 121: FzWa A691 94,9
Error in line 125: T4uwn9G A691 74,2
Error in line 132: AK7Fjrup A691 37,87
Error in line 124: AK7Fjrup A637 195,8
Error in line 83: gvtBv9 S973 58,1
Error in line 143: A470 A470 75,5
Error in line 144: A470 A637 50,8
Error in line 146: 6fefvM0TTj A691 59,8
Error in line 153: gvtBv9 S973 83,4
Error in line 136: AK7Fjrup A691 49,3
Error in line 166: gvtBv9 S973 21,1
Error in line 169: 6fefvM0TTj A470 80,2
Error in line 170: gvtBv9 A691 60,3
Error in line 172: gvtBv9 S973 45,4
Error in line 167: AK7Fjrup A637 260,7
Error in line 175: T4uwn9G A470 22,2
Error in line 186: T4uwn9G A637 55,6
Error in line 188: T4uwn9G A691 33,8
Error in line 212: 6fefvM0TTj A691 -1,7
Error in line 210: cjNRY1SRuV A637 52,2
Error in line 201: T4uwn9G S973 70,2
Error in line 208: 6fefvM0TTj A691 7,3
Error in line 230: T4uwn9G A691 36,2
Error in line 236: AK7Fjrup A637 98,7
Error in line 237: gvtBv9 A691 95,0
